Added autofocus to search bar

--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -66,22 +66,22 @@
               </label>
             </div>
           </div>
-        </form> 
+        </form>
         <!-- Search Bar -->
         <b>Course Codes:</b><br>
         <div class="search-bar-container">
-          <input type="text" id="search-input" name="search-input" oninput="filterCourses()" placeholder="Search course codes..." autocomplete="off">
+          <input type="text" id="search-input" name="search-input" oninput="filterCourses()" placeholder="Search course codes..." autocomplete="off" autofocus>
           <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Add spaces for additional matches (e.g. 'CS2 EL GESS')"><i class="fa fa-question-circle"></i></span>
         </div>
         <!-- Toggle Course Name Visibility -->
         <label for="toggle-course-names-checkbox" class="btn btn-secondary">
-          <input type="checkbox" id="toggle-course-names-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
+          <input type="checkbox" id="toggle-course-names-checkbox" style="transform: scale(1.2);" autocomplete="off" checked>
           &nbsp;Show Course Names
         </label>
         <!-- Toggle Forecast Visibility -->
         <div>
           <label for="toggle-forecast-checkbox" class="btn btn-secondary">
-            <input type="checkbox" id="toggle-forecast-checkbox" style="transform: scale(1.2);" autocomplete="off" checked> 
+            <input type="checkbox" id="toggle-forecast-checkbox" style="transform: scale(1.2);" autocomplete="off" checked>
             &nbsp;Show Original Vacancies
           </label>
           <span class="help-icon" data-toggle="tooltip" data-placement="top" title="Original number of slots at the start of the round"><i class="fa fa-question-circle"></i></span>
