--- a/src/web/templates/history.html
+++ b/src/web/templates/history.html
@@ -99,6 +99,7 @@
       {% set year = request.form.get('year', '2425') %}
       {% set semester = request.form.get('semester', '1') %}
       {% set type = request.form.get('type', 'ug') %}
+      {% set start_round_num = 0 if year in ['2122', '2223', '2324'] else 1 %}
       <div class="table-container">
         <table id="table-data">
           <!-- Table Headers -->
@@ -107,7 +108,7 @@
               <th class="table-code">Code</th>
               <th class="table-name">Name</th>
               <th class="table-class">Class</th>
-              {% for round_num in range(4) %}
+              {% for round_num in range(start_round_num, 4) %}
               <th class='table-round'>
                 {% if pdf_exists(year, semester, type, round_num) %}
                 {% set url = url_for('serve_pdf', year=year, semester=semester, student_type=type, round_num=round_num) %}
